[package]
name = "env-cli"
version = "1.0.2"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
readme = "README.md"
description = "Utility to run command in modified environment"
repository = "https://github.com/DoumanAsh/env.rs"
license = "BSL-1.0"
keywords = ["env", "environment"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[[bin]]
path = "src/main.rs"
name = "env"

[dependencies]
c-ffi = { version = "0.4", default-features = false }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
